<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Block\'em All</string>
    <string name="action_settings">Settings</string>
    <string name="action_viewall">View All</string>
    <string name="action_unblock">Unblock</string>
    <string name="hello_world">Hello world!</string>
    <string name="notify_call_arrive">NOTIFY_CALL_ARRIVE</string>
    <string name="button_recentcalls">Recent Calls</string>
    <string name="button_viewall">View All</string>
    <string name="button_addnew">Add New</string>
    <string name="button_unblock">Unblock</string>
    <string name="button_about">About</string>
    <string name="title_activity_single_user">Add New Block</string>
    <string name="title_activity_existing_single_user">Block Details</string>
    <string name="title_activity_view_all">View All</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_load_more">Load More</string>
    <string name="button_search">Search</string>
    <string name="hint_contact_name">Contact Name</string>
    <string name="hint_search">Search</string>
    <string name="hint_contact_number">Contact Number</string>
    <string name="button_add_number">Add Number</string>
    <string name="button_edit_number">Edit Number</string>
    <string name="page_size">10</string>
    <string name="title_activity_recent_call">RecentCallActivity</string>
    <string name="title_activity_unblock">UnblockActivity</string>
    <string name="note_edit_number">Contact numbers should be attached with country code( example - 8801671...... ). Multiple number should be seperated with semicolon(;).</string>
    <string name="about_text">The software is a personal project of Rejwan Shamsul Kabir Shuvo. If you do have any query or intend to bug report, please contact rejwan.shuvo AT gmail.com</string>

</resources>